--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="Style/swiper-bundle.min.css" />
     <link rel="stylesheet" href="Style/newcss.css" />
     <link rel="stylesheet" href="Style/style.css" />
@@ -537,8 +541,7 @@
                             <p class="portfolio__description">
                                 November, 2024
                             </p>
-                            <a href="./yuva.html"
-                                class="button button--flex button--small portfolio__button">
+                            <a href="./yuva.html" class="button button--flex button--small portfolio__button">
                                 View Samples
                                 <i class="uil uil-external-link-alt button__icon"></i>
                             </a>
@@ -561,12 +564,11 @@
                             <p class="portfolio__description">
                                 April, 2023
                             </p>
-                            <a href="./tedxCreative.html"
-                                class="button button--flex button--small portfolio__button">
+                            <a href="./tedxCreative.html" class="button button--flex button--small portfolio__button">
                                 View Samples
                                 <i class="uil uil-external-link-alt button__icon"></i>
                             </a>
-                            
+
                         </div>
                     </div>
 
@@ -687,18 +689,19 @@
                     <div class="contact__inputs grid">
                         <div class="contact__content">
                             <label for="Name" class="content__label">Name</label>
-                            <input type="text" class="contact__input " placeholder ="John Doe"/>
+                            <input type="text" class="contact__input " placeholder="John Doe" />
                         </div>
 
                         <div class="contact__content">
                             <label for="Email" class="content__label">Email</label>
-                            <input type="Email" class="contact__input" placeholder ="yourname@example.com" />
+                            <input type="Email" class="contact__input" placeholder="yourname@example.com" />
                         </div>
                     </div>
 
                     <div class="contact__content">
                         <label for="" class="content__label">Message</label>
-                        <textarea name="" id="" cols="0" rows="7" class="contact__input" placeholder ="Your Message Here"></textarea>
+                        <textarea name="" id="" cols="0" rows="7" class="contact__input"
+                            placeholder="Your Message Here"></textarea>
                     </div>
 
                     <div>
