--- a/tedxCreative.html
+++ b/tedxCreative.html
@@ -108,7 +108,7 @@
         />
         <img
           class="image-thumbnail"
-          src="Src/Images/TEDx Ramanujan College/_Black Simple World Space Week Instagram Story.png"
+          src="Src/Images/TEDx Ramanujan College/abc.png"
         />
         <img
           class="image-thumbnail wide-image"
