--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         </div>
 
                         <div>
-                            <span class="about__info-title">04+</span>
+                            <span class="about__info-title">05+</span>
                             <span class="about__info-name">
                                 Projects</span>
                         </div>
@@ -546,6 +546,33 @@
                                 <i class="uil uil-external-link-alt button__icon"></i>
                             </a>
                             <a href="https://www.instagram.com/yuva_delhi/"
+                                class="button button--flex button--small portfolio__button">
+                                See Live
+                                <i class="uil uil-external-link-alt button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- ------------------------moodlens-------------------- -->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="Src/Images/Thumbnail/moodlens.png" class="portfolio__img" />
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">
+                                MoodLens (Emotion Detection Software)
+                            </h3>
+                            <p class="portfolio__description">
+                                October, 2024
+                            </p>
+                            <a href="https://github.com/devanshtyagi26/FaceTrackerPrototype" class="button button--flex button--small portfolio__button">
+                                Github Repository
+                                <i class="uil uil-external-link-alt button__icon"></i>
+                            </a>
+                            <a href="https://www.linkedin.com/posts/tyagi-devansh_webdevelopment-ai-facerecognition-activity-7246189593337741312-_Ltf?utm_source=share&utm_medium=member_android"
+                                class="button button--flex button--small portfolio__button">
+                                See Demo
+                                <i class="uil uil-external-link-alt button__icon"></i>
+                            </a>
+                            <a href="https://emotionrecognitionprototype.web.app/Picture%20Click/index.html"
                                 class="button button--flex button--small portfolio__button">
                                 See Live
                                 <i class="uil uil-external-link-alt button__icon"></i>
