Extention Project Updates

--- a/index.html
+++ b/index.html
@@ -579,6 +579,29 @@
                             </a>
                         </div>
                     </div>
+                     <!-- ------------------------utilities-------------------- -->
+                     <div class="portfolio__content grid swiper-slide">
+                        <img src="Src/Images/Chrome Extension/Screenshot_1.png" class="portfolio__img" />
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">
+                                Chrome Extension: Frequently Visited Websites Organizer
+                            </h3>
+                            <p class="portfolio__description">
+                                December, 2024
+                            </p>
+                            <a href="https://github.com/devanshtyagi26/Utilities-Extension" class="button button--flex button--small portfolio__button">
+                                Github Repository
+                                <i class="uil uil-external-link-alt button__icon"></i>
+                            </a>
+                            <a href="https://www.linkedin.com/posts/tyagi-devansh_frontenddevelopment-chromeextension-techenthusiast-activity-7278323216681508864-1mZQ"
+                                class="button button--flex button--small portfolio__button">
+                                See Demo
+                                <i class="uil uil-external-link-alt button__icon"></i>
+                            </a>
+                            
+                        </div>
+                    </div>
                     <!-- ------------------------portfollio 2-------------------- -->
 
                     <div class="portfolio__content grid swiper-slide">
