--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         </div>
 
                         <div>
-                            <span class="about__info-title">05+</span>
+                            <span class="about__info-title">07+</span>
                             <span class="about__info-name">
                                 Projects</span>
                         </div>
@@ -530,6 +530,33 @@
 
             <div class="portfolio__container container swiper-container">
                 <div class="swiper-wrapper">
+                    <!-- ------------------------perceptron-------------------- -->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="Src/Images/Thumbnail/perceptron.png" class="portfolio__img" />
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">
+                                Interactive Single-Layer Perceptron (Perceptron Playground)
+                            </h3>
+                            <p class="portfolio__description">
+                                January, 2025
+                            </p>
+                            <a href="https://github.com/devanshtyagi26/Perceptron-Visualizer" class="button button--flex button--small portfolio__button">
+                                Github Repository
+                                <i class="uil uil-external-link-alt button__icon"></i>
+                            </a>
+                            <a href="https://www.linkedin.com/posts/tyagi-devansh_machinelearning-perceptron-javascript-activity-7283414784341950465-DnNh?utm_source=share&utm_medium=member_desktop"
+                                class="button button--flex button--small portfolio__button">
+                                See Demo
+                                <i class="uil uil-external-link-alt button__icon"></i>
+                            </a>
+                            <a href="https://perceptron-playground.vercel.app/"
+                                class="button button--flex button--small portfolio__button">
+                                See Live
+                                <i class="uil uil-external-link-alt button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
                     <!-- ------------------------portfollio 1-------------------- -->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="Src/Images/Thumbnail/yuva.png" class="portfolio__img" />
