--- a/index.html
+++ b/index.html
@@ -557,6 +557,33 @@
                             </a>
                         </div>
                     </div>
+                    <!-- ------------------------perceptron-------------------- -->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="Src/Images/Thumbnail/perceptron.png" class="portfolio__img" />
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">
+                                Neuro XOR
+                            </h3>
+                            <p class="portfolio__description">
+                                January, 2025
+                            </p>
+                            <a href="https://github.com/devanshtyagi26/XOR-MultiLayer-Perceptron" class="button button--flex button--small portfolio__button">
+                                Github Repository
+                                <i class="uil uil-external-link-alt button__icon"></i>
+                            </a>
+                            <a href="https://www.linkedin.com/posts/tyagi-devansh_neuralnetwork-machinelearning-xor-activity-7286441096094654464-jMWI?utm_source=share&utm_medium=member_desktop"
+                                class="button button--flex button--small portfolio__button">
+                                See Demo
+                                <i class="uil uil-external-link-alt button__icon"></i>
+                            </a>
+                            <a href="https://neuro-xor.vercel.app/"
+                                class="button button--flex button--small portfolio__button">
+                                See Live
+                                <i class="uil uil-external-link-alt button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
                     <!-- ------------------------portfollio 1-------------------- -->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="Src/Images/Thumbnail/yuva.png" class="portfolio__img" />
