--- a/index.html
+++ b/index.html
@@ -276,6 +276,62 @@
 
                         </div>
                     </div>
+                    <!--==================== Skill 3 =================-->
+                    <div class="skills__content skills__close">
+                        <div class="skills__header">
+                            <i class="fa-brands fa-react skills__icon"></i>
+
+                            <div>
+                                <h1 class="skills__title">Frontend Frameworks</h1>
+                            </div>
+
+                            <i class="uil uil-angle-down skills__arrow"></i>
+                        </div>
+
+                        <div class="skills__list grid">
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">React</h3>
+                                </div>
+
+                            </div>
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">Bootstrap</h3>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                    <!--==================== Skill 3 =================-->
+                    <div class="skills__content skills__close">
+                        <div class="skills__header">
+                            <i class="fa-solid fa-terminal skills__icon"></i>
+
+                            <div>
+                                <h1 class="skills__title">Creative Coding and Libraries</h1>
+                            </div>
+
+                            <i class="uil uil-angle-down skills__arrow"></i>
+                        </div>
+
+                        <div class="skills__list grid">
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">P5.js</h3>
+                                </div>
+
+                            </div>
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">WebGL</h3>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
 
 
                 </div>
@@ -352,6 +408,31 @@
                                 </div>
 
                             </div>
+                        </div>
+                    </div>
+                    <!--==================== Skill 6 =================-->
+                    <div class="skills__content skills__close">
+                        <div class="skills__header">
+                            <i class="fa-solid fa-hexagon-nodes skills__icon"></i>
+                            <div>
+                                <h1 class="skills__title">Neural Networks and Machine Learning</h1>
+                            </div>
+
+                            <i class="uil uil-angle-down skills__arrow"></i>
+                        </div>
+
+                        <div class="skills__list grid">
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">Neural Networking</h3>
+                                </div>
+
+                            </div>
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">Tensorflow.js</h3>
+                                </div>
+                            </div>  
                         </div>
                     </div>
                 </div>
