--- a/index.html
+++ b/index.html
@@ -666,6 +666,41 @@
 
         <div class="portfolio__container container swiper-container">
           <div class="swiper-wrapper">
+            <!-- ------------------------PopcornPick-------------------- -->
+            <div class="portfolio__content grid swiper-slide">
+              <img
+                src="Src/Images/Thumbnail/popcornpick.png"
+                class="portfolio__img"
+              />
+
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">
+                  PopcornPick – Your AI-Powered Movie Matchmaker
+                </h3>
+                <p class="portfolio__description">July, 2025</p>
+                <a
+                  href="https://github.com/devanshtyagi26/PopcornPick"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  Github Repository
+                  <i class="uil uil-external-link-alt button__icon"></i>
+                </a>
+                <a
+                  href="https://www.linkedin.com/posts/tyagi-devansh_onedaybuild-machinelearning-fastapi-activity-7349861243572133889-l4qn?utm_source=share"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  See Demo
+                  <i class="uil uil-external-link-alt button__icon"></i>
+                </a>
+                <a
+                  href="https://popcornpickapp.netlify.app/"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  See Live
+                  <i class="uil uil-external-link-alt button__icon"></i>
+                </a>
+              </div>
+            </div>
             <!-- ------------------------HappeningsNow-------------------- -->
             <div class="portfolio__content grid swiper-slide">
               <img
