--- a/index.html
+++ b/index.html
@@ -669,6 +669,39 @@
             <!-- ------------------------PopcornPick-------------------- -->
             <div class="portfolio__content grid swiper-slide">
               <img
+                src="Src/Images/Thumbnail/fursure.png"
+                class="portfolio__img"
+              />
+
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">FurSure - Cat vs Dog Predictor</h3>
+                <p class="portfolio__description">July, 2025</p>
+                <a
+                  href="https://github.com/devanshtyagi26/FurSure"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  Github Repository
+                  <i class="uil uil-external-link-alt button__icon"></i>
+                </a>
+                <a
+                  href="https://www.linkedin.com/posts/tyagi-devansh_machinelearning-nextjs-fastapi-activity-7352547815731990528-cKMI?utm_source=share"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  See Demo
+                  <i class="uil uil-external-link-alt button__icon"></i>
+                </a>
+                <a
+                  href="https://fursure.netlify.app/"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  See Live
+                  <i class="uil uil-external-link-alt button__icon"></i>
+                </a>
+              </div>
+            </div>
+            <!-- ------------------------PopcornPick-------------------- -->
+            <div class="portfolio__content grid swiper-slide">
+              <img
                 src="Src/Images/Thumbnail/popcornpick.png"
                 class="portfolio__img"
               />
