--- a/index.html
+++ b/index.html
@@ -666,7 +666,42 @@
 
         <div class="portfolio__container container swiper-container">
           <div class="swiper-wrapper">
-            <!-- ------------------------PopcornPick-------------------- -->
+            <!-- ------------------------MNISTic-------------------- -->
+            <div class="portfolio__content grid swiper-slide">
+              <img
+                src="Src/Images/Thumbnail/mnistic.png"
+                class="portfolio__img"
+              />
+
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">
+                  MNISTic – Handwritten Digit Classifier
+                </h3>
+                <p class="portfolio__description">July, 2025</p>
+                <a
+                  href="https://github.com/devanshtyagi26/MNISTic"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  Github Repository
+                  <i class="uil uil-external-link-alt button__icon"></i>
+                </a>
+                <a
+                  href="https://www.linkedin.com/posts/tyagi-devansh_machinelearning-fastapi-nextjs-activity-7355224098869833728-TjI6?utm_source=share"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  See Demo
+                  <i class="uil uil-external-link-alt button__icon"></i>
+                </a>
+                <a
+                  href="https://mnistic.netlify.app/"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  See Live
+                  <i class="uil uil-external-link-alt button__icon"></i>
+                </a>
+              </div>
+            </div>
+            <!-- ------------------------Fursure-------------------- -->
             <div class="portfolio__content grid swiper-slide">
               <img
                 src="Src/Images/Thumbnail/fursure.png"
